src/components/AboutContacts.module.css
.frameGroup,
.frameParent,
.inner {
  display: flex;
  align-items: flex-start;
  max-width: 100%;
}
.inner {
  align-self: stretch;
  justify-content: center;
  padding: var(--padding-0) var(--padding-20);
  box-sizing: border-box;
  flex-shrink: 0;
}
.frameGroup,
.frameParent {
  flex-direction: column;
  gap: var(--gap-60);
}
.frameGroup {
  width: 1525px;
  align-items: flex-end;
  gap: var(--gap-10);
  text-align: left;
  font-size: var(--fs-14);
  color: var(--Grey);
  font-family: var(--font-onest);
}
.frameWrapper,
.parent {
  display: flex;
  align-items: flex-start;
  max-width: 100%;
}
.frameWrapper {
  align-self: stretch;
}
.parent {
  width: 1351px;
  justify-content: space-between;
  gap: var(--gap-20);
}
.textGrid {
  width: 830px;
  display: flex;
  align-items: flex-start;
  gap: var(--gap-40);
  max-width: 100%;
}
.col {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.div {
  position: relative;
  line-height: 120%;
  z-index: 1;
}
.rdParent {
  width: 830px;
  display: flex;
  align-items: flex-start;
  gap: var(--gap-40);
  max-width: 100%;
  font-size: var(--fs-20);
}
.rightContent {
  width: 830px;
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.rd {
  flex: 1;
  position: relative;
  line-height: 120%;
  text-transform: uppercase;
  display: inline-block;
  min-width: 200px;
  z-index: 1;
}
.frameContainer,
.wrapper {
  display: flex;
  align-items: flex-start;
}
.frameContainer {
  width: 830px;
  flex-direction: column;
  max-width: 100%;
}
.wrapper {
  align-self: stretch;
  padding: var(--padding-0) 220px var(--padding-0) 348px;
}
.div2 {
  flex: 1;
  position: relative;
  line-height: 120%;
  z-index: 1;
}
.iii23Parent {
  align-self: stretch;
  display: flex;
  align-items: flex-start;
  gap: var(--gap-64);
  max-width: 100%;
}
.iii2Container {
  width: 284px;
  position: relative;
  display: inline-block;
  flex-shrink: 0;
  z-index: 1;
}
.blankLine,
.iii2Container,
.p {
  line-height: 120%;
}
.p {
  margin-block-start: 0;
  margin-block-end: 10px;
}
.eMailAeshkeevgmailcom {
  margin: 0;
  line-height: 120%;
}
.container {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 51px var(--padding-0) var(--padding-0);
  box-sizing: border-box;
  min-width: 313px;
  max-width: 100%;
}
.div3,
.frameChild {
  align-self: stretch;
  position: relative;
  z-index: 1;
}
.div3 {
  line-height: 120%;
}
.frameChild {
  width: 100%;
  max-width: 1525px;
  margin: 120px auto 100px auto;
  border-radius: var(--br-15);
  overflow: hidden;
  object-fit: cover;
}
@media screen and (max-width: 925px) {
  .frameParent {
    gap: var(--gap-30);
  }
  .parent,
  .rdParent {
    flex-wrap: wrap;
  }
  .rdParent {
    gap: var(--gap-20);
  }
  .wrapper {
    padding-left: 174px;
    padding-right: 110px;
    box-sizing: border-box;
  }
  .iii23Parent {
    gap: var(--gap-32);
    flex-wrap: wrap;
  }
  .iii2Container {
    flex: 1;
  }
}
@media screen and (max-width: 450px) {
  .rd {
    font-size: var(--fs-16);
    line-height: var(--lh-19);
  }
  .wrapper {
    padding-left: var(--padding-20);
    padding-right: var(--padding-20);
    box-sizing: border-box;
  }
  .iii23Parent {
    gap: var(--gap-16);
  }
}

